methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  isFacingTrial(color.c)
     
 }

def isFacingTrial(c:Color): Boolean={
if( estFaceMur()){
  return(false)
}
  avance()
  if (getCouleurSol()==Color.c){
  recule()
    return(true)
}else{
    recule()
  return false
}
}